# tras

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  COMPLETION_SUMMARY.md  CS_TRD_FIXED.md  Dockerfile  IMAGE_FLOW_VERIFICATION.md  INTEGRATION_SUMMARY.md  LICENSE  Makefile  PREPROCESSING_FEATURES.md  PREPROCESSING_SUMMARY.md  README.md  SCALE_FEATURE_SUMMARY.md  TEST_RESULTS.md  TREE_RINGS.md  TREE_RING_DETECTION.md  app.py  environment.yml  index.html  install.sh  pyproject.toml  requirements.txt  run.sh  script.js  styles.css
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
assets/: README.md
backend/: abstraction_layer.py  cross_section_tree.py  disk_wood_structure.py  labelme_layer.py
batch_configs/: gleditsia_config.yml  salix_config.yml
config/: default.json
docs/: training_custom_models.md
examples/: README.md
examples/cli/: README.md  process_config.yml
examples/tree_rings/: README.md
experiments/: coorecorder_comparison.py  run_urudendro_metric.py
experiments/coorecorder/: coorecorder_comparison.py
experiments/data/: C11C_east.csv  C11C_measurements.csv  C11C_south.csv  C11C_south.pos  C11C_west.pos  C13C_east.csv  C13C_east.pos  C13C_north.csv  C13C_north.pos  C14C_east.csv  C14C_east.pos  C14C_north.csv  C14C_north.pos  C14C_south.pos  C17C_east.csv  C17C_east.pos  C17C_measurements.csv  C17C_north.csv  C17C_north.pos  C17C_south.csv  C17C_south.pos  C17C_west.csv  C17C_west.pos  comparison.csv
experiments/data_2/: C11C_east.csv  C11C_east.pos  C11C_north.pos  C11C_south.csv  C11C_west.pos  C13C_east.csv  C13C_east.pos  C13C_measurements.csv  C13C_west.csv  C13C_west.pos  C14C_east.csv  C14C_measurements.csv  C14C_north.pos  C14C_south.pos  C14C_west.pos  C17C_east.pos  C17C_west.pos
labelme/: app.py
labelme/_automation/: tree_rings.py
labelme/cli/: ring_detect.py
labelme/tree_ring_methods/: __init__.py
labelme/utils/: apd_helper.py  cstrd_helper.py  deepcstrd_helper.py  pos_exporter.py
labelme/widgets/: __init__.py  preprocess_dialog.py  ring_properties_dialog.py  scale_dialog.py  tree_ring_dialog.py
lib/: apd.py  cstrd.py  deepcstrd.py  image.py  inbd.py  io.py  metrics.py  models.py
lib/cstrd_lib/: chain.py  metric_influence_area.py  sampling.py
tests/cli_tests/: test_detect.py  test_export_json.py
tests/labelme_tests/: test_app.py
tests/utils_tests/: test_annotation_export.py  test_batch_helper.py  test_dependency_checker.py  test_preprocess_helper.py  test_report_pdf.py  test_ring_sampling.py
tools/: download_release_assets.py
tras/: __init__.py  __main__.py  _label_file.py  api.py  app.py  shape.py  testing.py
tras/cli/: check_dependencies.py  detect.py  draw_json.py  export_json.py
tras/config/: __init__.py  default_config.yaml  (+2 more)
ui/: automatic.py  common.py  home.py  image.py  manual.py  metrics.py  report.py  save.py  update.py
(+125 files in other folders)
