[build-system]
requires = [
    "hatchling>=1.20.0",
    "hatch-vcs",
    "hatch-fancy-pypi-readme",
]
build-backend = "hatchling.build"

[project]
name = "tras"
description = "TRAS - Tree Ring Analyzer Suite - Specialized tool for dendrochronology"
requires-python = ">=3.9"
version = "2.1.4"
authors = [
    { name = "Henry Marichal", email = "hmarichal93@gmail.com" },
    { name = "Original LabelMe", email = "www.kentaro.wada@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "imgviz",
    "loguru",
    "matplotlib",
    "natsort>=7.1.0",
    "numpy",
    "pillow>=2.8",
    "pyqt5>=5.14.0",
    "pyqt5-qt5!=5.15.13 ; sys_platform == 'linux'",
    "pyqt5-qt5!=5.15.11,!=5.15.12,!=5.15.13,!=5.15.14,!=5.15.15,!=5.15.16 ; sys_platform == 'win32'",
    "pyyaml",
    "scikit-image",
    "opencv-python>=4.5.0",
    "scipy>=1.7.0",
    "shapely==1.7.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",
    "pandas>=1.3.0",
    "segmentation-models-pytorch>=0.3.0",
    "torchinfo>=1.7.0",
    "scikit-learn>=1.0.0",
    "opencv-contrib-python-headless>=4.5.0",
    "python-dateutil>=2.8.0",
    "typer>=0.12.5",
]

[project.license]
text = "GPL-3.0-only"

[project.scripts]
tras = "tras.__main__:main"
tras_detect = "tras.cli.detect:app"
tras_draw_json = "tras.cli.draw_json:main"
tras_draw_label_png = "tras.cli.draw_label_png:main"
tras_export_json = "tras.cli.export_json:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" },
]

[tool.pytest.ini_options]
qt_api = "pyqt5"
markers = [
    "gui: mark a test as a GUI test.",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pyqt5-stubs>=5.15.6.0",
    "pytest>=8.3.4",
    "pytest-qt>=4.4.0",
    "ruff~=0.12.11",
    "twine>=6.1.0",
    "types-pillow>=10.2.0.20240822",
    "types-pyyaml>=6.0.12.20241230",
]
